Fix HTML formatting and update contact email

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Contacto</h2>
         <div class="correo">
             <p>Correo eletrónico:</p>
-            <a href="mailto:robertogonzalesayala@gmail.com?subject=Contacto%20desde%20portafolio&body=Hola%20Roberto,%20me%20interesa%20tu%20servicio">robertogonzalesayala@gmail.com</a>
+            <a href="mailto:robertogonzalesayala@gmail.com?subject=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,%20me%20interesa%20tu%20servicio">robertogonzalesayala@gmail.com</a>
         </div>
 
         <div class="numero">
@@ -72,4 +72,5 @@
    </section>
 
 </body>
+
 </html>
