Fix HTML structure and update contact links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <h2>Contacto</h2>
         <div class="correo">
             <p>Correo eletrónico:</p>
-            <a href="mailto:robertogonzalesayala@gmail.com?subject=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,%20me%20interesa%20tu%20servicio">robertogonzalesayala@gmail.com</a>
+            <a  href="https://mail.google.com/mail/?view=cm&fs=1&to=robertogonzalesayala@gmail.com&su=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,%20me%20interesa%20tu%20servicio"
+            target="_blank"
+            rel="noopener noreferrer">robertogonzalesayala@gmail.com </a>
         </div>
 
         <div class="numero">
@@ -74,3 +76,4 @@
 </body>
 
 </html>
+
