Enhance contact section with additional email option
Added a second email contact option and improved the existing email link for better usability.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             rel="noopener noreferrer">robertogonzalesayala@gmail.com </a>
         </div>
 
+       <div class="correo2">
+            <p>Correo eletrónico:</p>
+            <a href="mailto:robertogonzalesayala@gmail.com?subject=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,%0D%0A%0D%0AMe%20interesa%20tu%20servicio%20de%20desarrollo%20web.%0D%0A%0D%0AGracias.">
+                robertogonzalesayala@gmail.com
+            </a>
+        </div>
+       
         <div class="numero">
             <p>WhatsApp:</p>
             <a href="https://wa.me/51964285143" target="_blank">+51 964 285 143</a>
@@ -76,4 +83,5 @@
 </body>
 
 </html>
+
 
