Enhance index.html with footer and social links
Added footer section with social media links and copyright notice.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Proyectos</h2>
             <div class="proyecto">
                 <h3><span class="flowix">Flowix</span>: Landing Page para una app móvil de gestión de tareas</h3>
-                <p class="desc">Desarrollo de una landing page de 5 secciones y totalmente responsive, para promocionar una app móvil para gestionar tareas de campo.</p>
+                <p class="desc">Desarrollo de una landing page de 5 secciones totalmente responsive, para promocionar una app móvil de gestión de tareas de campo.</p>
                 
                 <p><strong>Tecnologias usadas:</strong></p>
 
@@ -57,9 +57,10 @@
 
         </div>
     </section>
-
+   
    <section class="contacto">
         <h2>Contacto</h2>
+
         <div class="correo">
             <p>Correo eletrónico:</p>
             <a  href="https://mail.google.com/mail/?view=cm&fs=1&to=robertogonzalesayala@gmail.com&su=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,%20me%20interesa%20tu%20servicio"
@@ -67,21 +68,37 @@
             rel="noopener noreferrer">robertogonzalesayala@gmail.com </a>
         </div>
 
-       <div class="correo2">
+        <div class="correo2">
             <p>Correo eletrónico:</p>
-            <a href="mailto:robertogonzalesayala@gmail.com?subject=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,%0D%0A%0D%0AMe%20interesa%20tu%20servicio%20de%20desarrollo%20web.%0D%0A%0D%0AGracias.">
+            <a href="mailto:robertogonzalesayala@gmail.com?subject=Contacto%20desde%20portafolio&body=Hola%20Fabrizio,          %0D%0A%0D%0AMe%20interesa%20tu%20servicio%20de%20desarrollo%20web.%0D%0A%0D%0AGracias.">
                 robertogonzalesayala@gmail.com
             </a>
         </div>
-       
+
+
         <div class="numero">
             <p>WhatsApp:</p>
             <a href="https://wa.me/51964285143" target="_blank">+51 964 285 143</a>
         </div>
    </section>
 
+<footer class="footer">
+  <section class="redes">
+    <h2>Mis redes sociales</h2>
+
+    <div class="links">
+      <a href="https://www.linkedin.com/in/fabrizio-tello-palacios-478628384/"
+         target="_blank"
+         rel="noopener noreferrer"
+         class="social-link">
+         <img src="imagenes/linkedin.png" alt="LinkedIn">
+         <span>LinkedIn</span>
+      </a>
+    </div>
+  </section>
+
+  <p class="copy">&copy; 2026 Fabrizio Tello. Todos los derechos reservados.</p>
+</footer>
+
 </body>
-
 </html>
-
-
