--- a/Flowix/public/index.html
+++ b/Flowix/public/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="miembro-info">
-          <h3>Fabrizio Tello</h3>
+          <h3>Rafael Tello</h3>
           <p class="miembro-rol">Desarrollador Frontend</p>
           <p class="miembro-desc">Experto en interfaces de usuario y experiencia del cliente</p>
         </div>
