Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="proyecto">
                 <h3>Proyecto 2: Sitio Web Corporativo</h3>
                 <p class="desc">Creé un sitio web moderno y responsivo para una empresa tecnológica, mejorando su presencia en línea y facilitando la captación de clientes.</p>
-                <a href="proyecto1.html" class="btn">
+                <a href="https://f4bris.github.io/EcoApp.com/index.html#servicios" class="btn">
                     <button>Ver Proyecto</button>
                 </a>
 
@@ -102,3 +102,4 @@
 
 </body>
 </html>
+
