--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
             </div>
             <div class="proyecto">
-                <h3>Proyecto 2: Sitio Web Corporativo</h3>
+                <h3>EcoApp: Una App para concientizar a las personas sobre el cuidado ambiental y sostenibilidad.</h3>
                 <p class="desc">Creé un sitio web moderno y responsivo para una empresa tecnológica, mejorando su presencia en línea y facilitando la captación de clientes.</p>
-                <a href="https://f4bris.github.io/EcoApp.com/index.html#servicios" class="btn">
+                <a href="https://f4bris.github.io/EcoApp.com/index.html" class="btn" target="_blank">
                     <button>Ver Proyecto</button>
                 </a>
 
@@ -102,4 +102,5 @@
 
 </body>
 </html>
+
 
